# financial-fraud-detection

./: README.md
.github/workflows/: main.yml
conda/: notebook_env.yaml
notebooks/: financial-fraud-usage-np.ipynb  financial-fraud-usage-v2.ipynb
openshift/: pipeline.md
openshift/pipeline/: fraud_kfp_configmap.yaml  fraud_preprocess_train_pipeline.py  fraud_preprocess_train_pipeline.yaml  pyproject.toml
src/: preprocess_TabFormer_lp.py  preprocess_TabFormer_np.py
triton/: Dockerfile
